--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -21,6 +21,12 @@ jobs:
 
     steps:
 
+    - name: Cache build
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
+
     # The uses: keyword invokes a GitHub action:
     # https://github.com/marketplace/actions/checkout
     - name: Checkout repository
@@ -55,8 +61,11 @@ jobs:
 
     steps:
 
-    - name: Checkout repository
-      uses: actions/checkout@v3
+    - name: Cache restore
+      uses: actions/cache@v3
+      with:
+        key: cached-build-${{github.sha}}
+        path: .
 
     # https://github.com/marketplace/actions/maven-dependency-tree-dependency-submission
     - name: Update dependency graph
