--- a/.github/workflows/maven-ci.yml
+++ b/.github/workflows/maven-ci.yml
@@ -78,6 +78,11 @@ jobs:
   build:
 
     needs: [maven_test]  # Enforces that maven_test runs first
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
    
     steps:
 
